# pandas-journey

./: 01_Pandas_Series.ipynb  02_Accessing_Values.ipynb  03_Modifying_Values.ipynb  04_Functions_Methods.ipynb  04_Series_Methods.ipynb  05_Pandas_DataFrame.ipynb  06_Accessing_DataFrame.ipynb  07_Modifying_DataFrame.ipynb  08_DataFrame_Methods.ipynb  09_GroupBy.ipynb  10_Merging_DataFrame.ipynb  11_MultiIndex_Objects.ipynb  12_Pandas_Strings.ipynb  13_Time_Date.ipynb  LICENSE  README.md  pyproject.toml  ruff.toml
